--- a/pages/maintenance.html
+++ b/pages/maintenance.html
@@ -11,6 +11,8 @@
   <link rel="icon" type="image/x-icon" href="../public/img/iwoc_final_comp-min.png" />
   <title>IWoC Registration Form</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="../public/css/click-snow.css">
+
 
 </head>
 <style>
@@ -26,12 +28,9 @@
     background-color: #111827;
   }
 </style>
-
+<script type="text/javascript" src="https://storage.yandexcloud.net/slaylines/uploads/snowflakes.min.1.0.0.js" defer></script>
 <body>
-  <!-- particles.js container -->
-  <div id="particles-js"></div>
-
-  <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+ 
   <script src="../public/js/register.js"></script>
 
   <div class="dialogCard flex flex-col justify-center items-center rounded-lg" id="dialogCard" style="margin-top: 10%;">
@@ -57,5 +56,7 @@
 
 </body>
 <script src="/public/js/form.js"></script>
+<script src="../public/js/snowflakes.js"></script>
+
 
 </html>
