--- a/pages/login.html
+++ b/pages/login.html
@@ -12,6 +12,8 @@
   <!-- Tailwind -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet">
   <link rel="stylesheet" href="../public/css/particle.css" />
+  <link rel="stylesheet" href="../public/css/click-snow.css">
+
   <style>
     @import url('https://fonts.googleapis.com/css?family=Karla:400,700&display=swap');
 
@@ -32,12 +34,13 @@
         display: none;
       }
     }
+    
   </style>
 </head>
 
+<script type="text/javascript" src="https://storage.yandexcloud.net/slaylines/uploads/snowflakes.min.1.0.0.js" defer></script>
 <body class="font-family-karla h-screen">
 
-  <div id="particles-js"></div>
 
   <div class="w-full flex flex-wrap">
 
@@ -67,20 +70,22 @@
           </div>
         </a>
         <div class="text-center pt-12 pb-12 text-white">
-          <p>Not a part of IWOC yet? <a href="/register" class="underline font-semibold">Register here.</a></p>
+          <p>Not a part of IWOC yet? 
+            <a href="/register" class="underline font-semibold">Register here.</a></p>
         </div>
       </div>
 
     </div>
 
     <!-- Image Section -->
-    <div class="w-1/3 login-img">
-      <img class="object-cover h-screen hidden md:block sideImage" src="../public/img/Relating-customer-service-to-website-redesign-removebg-preview.png">
+    <div class="w-1/2 login-img">
+      <img class="object-cover h-screen hidden md:block sideImage" src="../public/img/Eat .Code. Sleep. (2).gif">
     </div>
   </div>
 
-  <script src="../public/js/particles.js"></script>
-  <script src="../public/js/particle.js"></script>
+  <!-- <script src="../public/js/particles.js"></script>
+  <script src="../public/js/particle.js"></script> -->
+  <script src="../public/js/snowflakes.js"></script>
 
 </body>
 
