changes for landing page only

--- a/pages/landing.html
+++ b/pages/landing.html
@@ -90,7 +90,7 @@
   
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <a href="#">
-                  <img class="nav-logo none transition-all duration-200 " src="../public/img/Season_2/Iwoc_S2.png" width="50px" alt="">
+                  <img class="nav-logo none transition-all duration-200 " src="../public/img/Season_2/Iwoc_S2.png" width="60px" style="padding: 10px;" alt="">
                 </a>
                 <ul class="navbar-nav py-12 float-end py-md-0 side">
                   <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
@@ -109,23 +109,23 @@
                   <!-- <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
                     <a class="nav-link" href="#faq">FAQ's</a>
                   </li> -->
-                  <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
+                  <!-- <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
                     <a class="nav-link  " style="color: #A4BEE1;" href="/project">Projects</a>
-                  </li>
+                  </li> -->
                   <!-- <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
                     <a class="nav-link" href="/login">Login</a>
                   </li> -->
                   <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4 ">
                     <!-- <a class="nav-link" href="/eventRegistration">Upcoming Talks</a> -->
                   </li>
-                  <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
+                  <!-- <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
                     <a class="nav-link login-desk " href="/login">
                       <button class="nav-login-btn">
                        LOGIN
                       </button>
                     </a>
                     <a class="nav-link login-mobile" href="/login">Login</a>
-                  </li>
+                  </li> -->
                   <!-- <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
                     <a class="nav-link login-desk" href="/eventRegistration">
                       <button class="shadow__btn">
@@ -157,7 +157,7 @@
         <div class="fancy-border2"></div>
       </div>
     </div>
-    <div class="timercontainer">
+    <!-- <div class="timercontainer">
       <h1 id="headline" style="font-weight: bolder">Contribution ends in</h1>
       <div id="countdown">
         <ul>
@@ -167,10 +167,10 @@
           <li class="timerli"><span id="seconds"></span>Seconds</li>
         </ul>
       </div>
-    </div>
+    </div> -->
     </div>
   
-    <div class="twobuttons" style="margin-top: 5%;">
+    <!-- <div class="twobuttons" style="margin-top: 5%;">
       <button data-text="Awesome" class="discordbutton mob" onclick="window.location.href='/login'">
         <span class="actual-text">&nbsp;Login&nbsp;</span>
         <span class="hover-text" aria-hidden="true">&nbsp;Login&nbsp;</span>
@@ -183,7 +183,7 @@
         <span class="actual-text">&nbsp;Discord&nbsp;</span>
         <span class="hover-text" aria-hidden="true">&nbsp;Discord&nbsp;</span>
       </button>
-    </div>
+    </div> -->
   
     <!-- about -->
     <div class="about" id="about">
