--- a/pages/landing.html
+++ b/pages/landing.html
@@ -255,10 +255,9 @@
         <div data-aos="zoom-out-down">
   
           <div class="cd-timeline-content">
-            <h2><strong>January 20th '2023</strong></h2>
+            <h2><strong>December 26th '2023</strong></h2>
             <p>
-              Registration opens, allowing potential contributors to sign up for
-              the event
+              >Unlock Registration: Sign up and join the journey!
             </p>
           </div>
         </div>
@@ -269,10 +268,9 @@
         <div data-aos="zoom-out-down">
           <div data-aos="zoom-in"></div>
           <div class="cd-timeline-content">
-            <h2><strong>Febuary 1st '2023</strong></h2>
+            <h2><strong>December 26th '2023</strong></h2>
             <p>
-              Contribution begins, and contributors may begin contributing to the
-              projects listed.
+              >Begin Contribution: Shape the future by contributing to listed projects!
             </p>
           </div>
         </div>
@@ -282,9 +280,10 @@
         <div class="cd-timeline-img cd-location"></div>
         <div data-aos="zoom-out-down">
           <div class="cd-timeline-content">
-            <h2><strong>Febuary 11th '2023</strong></h2>
+            <h2><strong>January 4th '2024 </strong></h2>
             <p>
-              Talk sessions by Unnati Chhabra, Kanishk Pachauri.
+              <!-- Talk sessions by Unnati Chhabra, Kanishk Pachauri. -->
+              >Grand Opening Ceremony: Let's ignite the event with enthusiasm and brilliance!
             </p>
           </div>
         </div>
@@ -294,9 +293,10 @@
         <div class="cd-timeline-img cd-location"></div>
         <div data-aos="zoom-out-down">
           <div class="cd-timeline-content">
-            <h2><strong>Febuary 18th '2023</strong></h2>
+            <h2><strong>January 6th '2024</strong></h2>
             <p>
-              Talk sessions by Shashank Srivastava, Saksham Saini, Vanshika Garg
+              <!-- Talk sessions by Shashank Srivastava, Saksham Saini, Vanshika Garg -->
+              >GitHub Session by Experts: Dive deep into the world of GitHub with top experts.
             </p>
           </div>
         </div>
@@ -306,8 +306,8 @@
         <div class="cd-timeline-img cd-location"></div>
         <div data-aos="zoom-out-down">
           <div class="cd-timeline-content">
-            <h2><strong>Febuary 25th '2023</strong></h2>
-            <p>Talk sessions by Yash Garg, Shreya Prasad, Tushar Gupta</p>
+            <h2><strong>January 27th '2024</strong></h2>
+            <p>>Unmissable Speaker Session: Prepare to be inspired by an extraordinary individual!</p>
           </div>
         </div>
       </div>
@@ -316,8 +316,8 @@
         <div class="cd-timeline-img cd-location"></div>
         <div data-aos="zoom-out-down">
           <div class="cd-timeline-content">
-            <h2><strong>Febuary 26th '2023</strong></h2>
-            <p>Online sessions by Vinit Shahdeo</p>
+            <h2><strong>Febuary 4th '2024</strong></h2>
+            <p>>Contributions End & Closing Ceremony: Celebrate achievements and the event's success!</p>
           </div>
         </div>
       </div>
@@ -326,8 +326,8 @@
         <div class="cd-timeline-img cd-movie"></div>
         <div data-aos="zoom-out-down">
           <div class="cd-timeline-content">
-            <h2><strong>March 1st '2023</strong></h2>
-            <p>Event closing ceremony, including the announcement of results</p>
+            <h2><strong>Date to be announced soon..</strong></h2>
+            <p>>Anticipate the Grand Felicitation Program: Recognizing exceptional talent and dedication!</p>
           </div>
         </div>
       </div>
