--- a/pages/landing.html
+++ b/pages/landing.html
@@ -152,7 +152,7 @@
     <div data-aos="zoom-in">
       <div class="logo" id="logo">
         <div class="card-cursor" id="star-card"></div>
-        <img src="../public/img/Season_2/6-removebg-preview.png" class="mainlogo"  loading="lazy"/>
+        <img src="../public/img/Season_2/iwoc logo (1).png" class="mainlogo"  loading="lazy"/>
         <div class="fancy-border1"></div>
         <div class="fancy-border2"></div>
       </div>
@@ -257,7 +257,7 @@
           <div class="cd-timeline-content">
             <h2><strong>December 26th '2023</strong></h2>
             <p>
-              >Unlock Registration: Sign up and join the journey!
+              Unlock Registration: Sign up and join the journey!
             </p>
           </div>
         </div>
@@ -270,7 +270,7 @@
           <div class="cd-timeline-content">
             <h2><strong>December 26th '2023</strong></h2>
             <p>
-              >Begin Contribution: Shape the future by contributing to listed projects!
+              Begin Contribution: Shape the future by contributing to listed projects!
             </p>
           </div>
         </div>
@@ -283,7 +283,7 @@
             <h2><strong>January 4th '2024 </strong></h2>
             <p>
               <!-- Talk sessions by Unnati Chhabra, Kanishk Pachauri. -->
-              >Grand Opening Ceremony: Let's ignite the event with enthusiasm and brilliance!
+              Grand Opening Ceremony: Let's ignite the event with enthusiasm and brilliance!
             </p>
           </div>
         </div>
@@ -296,7 +296,7 @@
             <h2><strong>January 6th '2024</strong></h2>
             <p>
               <!-- Talk sessions by Shashank Srivastava, Saksham Saini, Vanshika Garg -->
-              >GitHub Session by Experts: Dive deep into the world of GitHub with top experts.
+              GitHub Session by Experts: Dive deep into the world of GitHub with top experts.
             </p>
           </div>
         </div>
@@ -307,7 +307,7 @@
         <div data-aos="zoom-out-down">
           <div class="cd-timeline-content">
             <h2><strong>January 27th '2024</strong></h2>
-            <p>>Unmissable Speaker Session: Prepare to be inspired by an extraordinary individual!</p>
+            <p>Unmissable Speaker Session: Prepare to be inspired by an extraordinary individual!</p>
           </div>
         </div>
       </div>
@@ -317,7 +317,7 @@
         <div data-aos="zoom-out-down">
           <div class="cd-timeline-content">
             <h2><strong>Febuary 4th '2024</strong></h2>
-            <p>>Contributions End & Closing Ceremony: Celebrate achievements and the event's success!</p>
+            <p>Contributions End & Closing Ceremony: Celebrate achievements and the event's success!</p>
           </div>
         </div>
       </div>
@@ -327,7 +327,7 @@
         <div data-aos="zoom-out-down">
           <div class="cd-timeline-content">
             <h2><strong>Date to be announced soon..</strong></h2>
-            <p>>Anticipate the Grand Felicitation Program: Recognizing exceptional talent and dedication!</p>
+            <p>Anticipate the Grand Felicitation Program: Recognizing exceptional talent and dedication!</p>
           </div>
         </div>
       </div>
@@ -339,13 +339,13 @@
           <div class="prize">
         <div class="card new-card" style="margin-top: 10%; position: relative;" id="second">
           <img src="../public/img/bronze.svg" style="width: 50%; scale:1.2">
-          <div class="prizedescription">₹1.5k + Swags</div>
-          <div class="prizeheading">Novice</div>
+          <div class="prizedescription">₹2.5k + Swags</div>
+          <div class="prizeheading">Standard</div>
           <div style="margin-top: 40%;"></div>
         </div>
-        <div class="card new-card" style="margin-top: 10%; position: relative;" id="first">
+        <div class="card new-card" style="margin-top: 14%; position: relative;" id="first">
           <img src="../public/img/silver.svg" style="width: 50%; scale:1.2">
-          <div class="prizedescription">₹3k + Swags</div>
+          <div class="prizedescription">₹3&nbsp;k + Swags</div>
           <div class="prizeheading">Competent</div>
           <div style="margin-top: 40%;"></div>
         </div>
@@ -363,10 +363,9 @@
         </div>
         <div class="card new-card" style="margin-top: 14%; " id="second">
           <img src="../public/img/bronze.svg" style="width: 50%; scale:1.2">
-          <div class="prizedescription">₹2.5k + Swags</div>
-          <div class="prizeheading">Standard</div>
+          <div class="prizedescription">₹1.5k + Swags</div>
+          <div class="prizeheading">Novice</div>
           <div style="margin-top: 40%;"></div>
-        
         </div>
       </div>
       
