--- a/pages/landing.html
+++ b/pages/landing.html
@@ -227,9 +227,9 @@
 
             <div class="cardContainer" style="">
               <div class="project-card">
-                <a class="project-card" href="/project">
-                <p class="city"><strong>Project</strong></p>
-                <p class="weather">30+</p>
+                <a class="project-card" href="#">
+                <p class="city"><strong>35+</strong></p>
+                <p class="weather">Projects</p>
               </a>
                 </div>
             </div>
@@ -248,8 +248,8 @@
              ">
                 <div class="project-card"
                 >
-                  <a class="project-card" href="/project">
-                  <p class="city"><strong>0+</strong></p>
+                  <a class="project-card" href="#">
+                  <p class="city"><strong>500+</strong></p>
                   <p class="weather">Registrations</p>
                   </a>
                 </div>
@@ -266,8 +266,8 @@
               position: absolute;
               ">
                 <div class="project-card">
-                  <a class="project-card" href="/project">
-                  <p class="city"><strong>0</strong></p>
+                  <a class="project-card" href="#">
+                  <p class="city"><strong>1100+</strong></p>
                   <p class="weather">Contributions</p>
                 </a>
                 </div>
