--- a/pages/landing.html
+++ b/pages/landing.html
@@ -976,7 +976,7 @@
   <!-- <script src="../public/js/particles.js"></script>
   <script src="../public/js/particle.js"></script> -->
   <script src="../public/js/faq.js"></script>
-  <script src="../public/js/timer.js"></script>
+  <!-- <script src="../public/js/timer.js"></script> -->
   <script src="../public/js/speaker.js"></script>
   <script src="../public/js/navbar.js"></script>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
