--- a/pages/event_registration.html
+++ b/pages/event_registration.html
@@ -289,7 +289,7 @@ select option {
   <!-- <script src="../public/js/particles.js"></script>
   <script src="../public/js/particle.js"></script> -->
   <script src="../public/js/event_registration.js"></script>
-  <script src="/public/js/form.js"></script>
+  <!-- <script src="/public/js/form.js"></script> -->
   <script src="../public/js/snowflakes.js"></script>
 </body>
 
