--- a/pages/maintenance.html
+++ b/pages/maintenance.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="/public/css/buttonDiscord.css">
   <link rel="stylesheet" href="/public/css/formbutton.css">
   <link rel="icon" type="image/x-icon" href="../public/img/iwoc_final_comp-min.png" />
-  <title>IWoC Registration Form</title>
+  <title>IWoC</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="../public/css/click-snow.css">
 
@@ -55,7 +55,7 @@
 
 
 </body>
-<script src="/public/js/form.js"></script>
+<!-- <script src="/public/js/form.js"></script> -->
 <script src="../public/js/snowflakes.js"></script>
 
 
