--- a/pages/admin-register.html
+++ b/pages/admin-register.html
@@ -1308,6 +1308,9 @@
                 <div class="mb-3">
                   <input type="password" name="password" class="form-control" placeholder="Password" aria-label="Password" aria-describedby="password-addon">
                 </div>
+                <div class="mb-3">
+                  <input type="password" name="role" class="form-control" placeholder="Role" aria-label="Password" aria-describedby="password-addon">
+                </div>
                 <!-- <div class="form-check form-check-info text-left">
                   <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" checked>
                   <label class="form-check-label" for="flexCheckDefault">
