--- a/pages/form.html
+++ b/pages/form.html
@@ -287,9 +287,9 @@
   </div>
 
   <!-- <script src="../public/js/particles.js"></script>
-  <script src="../public/js/particle.js"></script>
-  <script src="../public/js/register.js"></script> -->
-  <script src="/public/js/form.js"></script>
+  <script src="../public/js/particle.js"></script> -->
+  <script src="../public/js/register.js"></script>
+  <!-- <script src="/public/js/form.js"></script> -->
   <script src="../public/js/snowflakes.js"></script>
 
 </body>
