Sponsors_btn_link_updated

--- a/pages/landing.html
+++ b/pages/landing.html
@@ -171,7 +171,7 @@
         </ul>
       </div>
     </div> -->
-    </div>
+    <!-- </div> -->
   
     <!-- buttons -->
     <div class="twobuttons" >
@@ -188,7 +188,7 @@
         </span>
         <p class="text-btn">Discord</p>
       </button>
-      <button class="bookmarkBtn" onclick="window.location.href= '#'">
+      <button class="bookmarkBtn" onclick="window.location.href= 'https://forms.gle/yx4erWy3t5QXe1FW7'">
         <span class="IconContainer"> 
           <img src="../public/img/handshake-svgrepo-com.svg" alt="">
         </span>
