--- a/pages/landing.html
+++ b/pages/landing.html
@@ -213,7 +213,7 @@
         </p>
         <p>
           <span style="font-weight: 800;">• Glimpses of IWOC 1.0, organized by Innogeeks! <img src="../public/img/rocket-svgrepo-com.svg" alt=""></span>  <br>
-          In this month-long Open Source Contribution event held in February 2023, we were excited to have facilitated 30+ impactful projects, hosted 4 engaging speaker sessions comprising of speaker like Unnati Chhabra - SDE @zomato, Shashank Srivastava - India Business @Google, and others with garnered registrations from a 350+ students, and actively involved 150+ contributors.
+          In this month-long Open Source Contribution event held in February 2023, we were excited to have facilitated 35+ impactful projects, hosted 4 engaging speaker sessions comprising of speaker like Unnati Chhabra - SDE @zomato, Shashank Srivastava - India Business @Google, and others with garnered registrations from a 500+ students, and actively involved 350+ contributors.
           <br>
           Through our unique approach, maintainers were felicitated for acquiring valuable contributions on their projects, resulting in the successful merging of 100+ PRs.
           <br>
@@ -575,7 +575,7 @@
     </div>
   
     <!-- speakers -->
-    <h1 class="title" id="speaker" style="margin-top: 10%">Speakers</h1>
+    <h1 class="title" id="speaker" style="margin-top: 10%">Past Speakers</h1>
     <div class="speakerbody">
       <div class="blog-slider">
         <div class="blog-slider__wrp swiper-wrapper">
