--- a/pages/landing.html
+++ b/pages/landing.html
@@ -212,7 +212,7 @@
            About <strong class="about-iwoc">IWOC <span style="color: gold; font-weight: 999;"> 1.0</span></strong> 
         </p>
         <p>
-          <span style="font-weight: 800;">• Glimpses of IWOC 1.0, organized by Innogeeks! <img src="../public/img/rocket-svgrepo-com.svg" alt=""></span>  <br>
+          <span style="font-weight: 800;">Glimpses of IWOC 1.0, organized by Innogeeks! <img src="../public/img/rocket-svgrepo-com.svg" alt=""></span>  <br>
           In this month-long Open Source Contribution event held in February 2023, we were excited to have facilitated 35+ impactful projects, hosted 4 engaging speaker sessions comprising of speaker like Unnati Chhabra - SDE @zomato, Shashank Srivastava - India Business @Google, and others with garnered registrations from a 500+ students, and actively involved 350+ contributors.
           <br>
           Through our unique approach, maintainers were felicitated for acquiring valuable contributions on their projects, resulting in the successful merging of 100+ PRs.
