--- a/pages/landing.html
+++ b/pages/landing.html
@@ -105,8 +105,11 @@
                   <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
                     <a class="nav-link" style="color: #A4BEE1;" href="#prizes">Prizes</a>
                   </li>
+                  <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
+                    <a class="nav-link" style="color: #A4BEE1;" href="/register">Register Now</a>
+                  </li>
                    <!-- <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
-                    <a class="nav-link" href="#speaker">Speakers</a>
+                    <a class="nav-link" href="/register">Register Now</a>
                   </li> -->
 
                   <!-- <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
