feat: removed student library ID from app.

--- a/pages/event_registration.html
+++ b/pages/event_registration.html
@@ -229,7 +229,7 @@ select option {
                 </div>
               </div>
 
-              <div class="pb-1 pt-2 mt-2">
+              <!-- <div class="pb-1 pt-2 mt-2">
                 <div class="relative z-0">
                   <input type="text" id="libid" name="libid"
                     class="block py-2.5 px-0 w-full text-lg bg-transparent border-0 border-b-2 border-white appearance-none text-blue-200 dark:border-gray-600 dark:focus:border-blue-200 focus:outline-none focus:ring-0 focus:border-blue-200 peer"
@@ -239,7 +239,7 @@ select option {
                     ID*</label>
                   <div class="error"></div>
                 </div>
-              </div>
+              </div> -->
 
               <div class="pb-1 pt-2 mt-2">
                 <div class="relative z-0">
