--- a/pages/form.html
+++ b/pages/form.html
@@ -228,7 +228,7 @@
                 </div>
               </div>
 
-              <div class="pb-1 pt-2 mt-2">
+              <!-- <div class="pb-1 pt-2 mt-2">
                 <div class="relative z-0">
                   <input type="text" id="libid" name="libid"
                     class="block py-2.5 px-0 w-full text-lg bg-transparent border-0 border-b-2 border-white appearance-none text-blue-200 dark:border-gray-600 dark:focus:border-blue-200 focus:outline-none focus:ring-0 focus:border-blue-200 peer"
@@ -238,7 +238,7 @@
                     ID*</label>
                   <div class="error"></div>
                 </div>
-              </div>
+              </div> -->
 
               <div class="pb-1 pt-2 mt-2">
                 <div class="relative z-0">
