--- a/pages/landing.html
+++ b/pages/landing.html
@@ -124,7 +124,7 @@
                   <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4 ">
                     <!-- <a class="nav-link" href="/eventRegistration">Upcoming Talks</a> -->
                   </li>
-                  <button class="button-register">
+                  <!-- <button class="button-register">
                     Register Now
                     <div class="star-1">
                       <svg
@@ -240,7 +240,7 @@
                         </g>
                       </svg>
                     </div>
-                  </button>
+                  </button> -->
                   
                   <!-- <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
                     <a class="nav-link login-desk " href="/login">
@@ -1066,7 +1066,7 @@
           2024?
         </h2>
         <div id="accordion__panel-3" class="accordion__item--panel" role="region" aria-labelledby="accordion__trigger-3">
-          <p>Participation from all across India is permitted.</p>
+          <p>Participation is allowed from all colleges.</p>
         </div>
       </div>
     </div>
