--- a/pages/landing.html
+++ b/pages/landing.html
@@ -533,33 +533,21 @@
       <h1 class="title" style="margin-top: 8%;">Prizes</h1>
           <div class="prize">
         <div class="card new-card" style="margin-top: 10%; position: relative;" id="second">
-          <img src="../public/img/bronze.svg" style="width: 50%; scale:1.2" loading="lazy" >
-          <div class="prizedescription">₹2.5k + Swags</div>
+          <img src="../public/img/bronze.svg" style="width: 50%; scale:1.2; position: absolute; top:-10%" loading="lazy" >
+          <div class="prizedescription">₹2k + Swags</div>
           <div class="prizeheading">Standard</div>
-          <div style="margin-top: 40%;"></div>
-        </div>
-        <div class="card new-card" style="margin-top: 14%; position: relative;" id="first">
-          <img src="../public/img/silver.svg" style="width: 50%; scale:1.2" loading="lazy">
-          <div class="prizedescription">₹3&nbsp;k + Swags</div>
-          <div class="prizeheading">Competent</div>
           <div style="margin-top: 40%;"></div>
         </div>
         <div class="card new-card" id="winner" style="position: relative;">
           <img src="../public/img/gold.svg" style="width: 50%; scale:2; position: absolute; top:-30%">
-          <div class="prizedescription">₹4.5k + Swags</div>
+          <div class="prizedescription">₹4k + Swags</div>
           <div class="prizeheading">Expert</div>
           <div style="margin-top: 40%;"></div>
         </div>
         <div class="card new-card" style="margin-top: 10%; position: relative;" id="first">
-          <img src="../public/img/silver.svg" style="width: 50%; scale:1.2" loading="lazy">
-          <div class="prizedescription">₹3.5k + Swags</div>
+          <img src="../public/img/silver.svg" style="width: 50%; scale:1.2; position: absolute; top:-10%" loading="lazy">
+          <div class="prizedescription">₹3k + Swags</div>
           <div class="prizeheading">Proficient</div>
-          <div style="margin-top: 40%;"></div>
-        </div>
-        <div class="card new-card" style="margin-top: 14%; " id="second">
-          <img src="../public/img/bronze.svg" style="width: 50%; scale:1.2" loading="lazy">
-          <div class="prizedescription">₹1.5k + Swags</div>
-          <div class="prizeheading">Novice</div>
           <div style="margin-top: 40%;"></div>
         </div>
       </div>
