--- a/pages/landing.html
+++ b/pages/landing.html
@@ -534,19 +534,19 @@
           <div class="prize">
         <div class="card new-card" style="margin-top: 10%; position: relative;" id="second">
           <img src="../public/img/bronze.svg" style="width: 50%; scale:1.2; position: absolute; top:-10%" loading="lazy" >
-          <div class="prizedescription" style="margin-top: 50%;">₹2k & Innohacks Swags</div>
+          <div class="prizedescription" style="margin-top: 50%;">₹2k & IWOC Swags</div>
           <!-- <div class="prizeheading">Standard</div> -->
           <div style="margin-top: 40%;"></div>
         </div>
         <div class="card new-card" id="winner" style="position: relative;">
           <img src="../public/img/gold.svg" style="width: 50%; scale:2; position: absolute; top:-30%">
-          <div class="prizedescription" style="margin-top: 50%;">₹5k & Innohacks Swags</div>
+          <div class="prizedescription" style="margin-top: 50%;">₹5k & IWOC Swags</div>
           <!-- <div class="prizeheading">Expert</div> -->
           <div style="margin-top: 40%;"></div>
         </div>
         <div class="card new-card" style="margin-top: 10%; position: relative;" id="first">
           <img src="../public/img/silver.svg" style="width: 50%; scale:1.2; position: absolute; top:-10%" loading="lazy">
-          <div class="prizedescription" style="margin-top: 50%;">₹3k & Innohacks Swags</div>
+          <div class="prizedescription" style="margin-top: 50%;">₹3k & IWOC Swags</div>
           <!-- <div class="prizeheading">Proficient</div> -->
           <div style="margin-top: 40%;"></div>
         </div>
