added_more_community_partners

--- a/pages/landing.html
+++ b/pages/landing.html
@@ -977,8 +977,16 @@
 <!-- Community Partner -->
     <div class="community-partner">
       <h1 class="title" style="margin-top: 8%; margin-bottom: 2%">Community Partner</h1>
-      <div style="color: white; text-align: center; margin: 0 5% 2% 5%">
-       <img src="../public/img/iosc.png" class="iosc_logo" width="250" alt="">
+      <div class="" style="display: flex;  justify-content: center; flex-wrap: wrap;">
+        <div style="color: white; text-align: center; margin: 0 5% 2% 5%">
+          <img src="../public/img/sponsors/iosc.png" class="iosc_logo" width="200" alt="">
+         </div>
+         <div style="color: white; text-align: center; margin: 0 5% 2% 5%">
+          <img src="../public/img/sponsors/gdsc.png" class="iosc_logo" width="200" alt="">
+         </div>
+         <div style="color: white; text-align: center; margin: 0 5% 2% 5%">
+          <img src="../public/img/sponsors/algocs.png" class="iosc_logo" width="200" alt="">
+         </div>
       </div>
     </div>
   
@@ -1239,19 +1247,15 @@
     </div>
    </footer>
   
-    <!-- <div class="mainfooter">
-      <div></div>
-      <div></div>
-    </div> -->
   
   </div>
-  <script>
+  <!-- <script>
     var loader = document.getElementById("loader")
 
     window.addEventListener("load", function() {
     loader.style.display = "none"
       })
-  </script>
+  </script> -->
 
   <script src="../public/js/click_snow.js"></script>
  <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
