text_updated_under_community_partner

--- a/pages/landing.html
+++ b/pages/landing.html
@@ -980,12 +980,15 @@
       <div class="" style="display: flex;  justify-content: center; flex-wrap: wrap;">
         <div style="color: white; text-align: center; margin: 0 5% 2% 5%">
           <img src="../public/img/sponsors/iosc.png" class="iosc_logo" width="200" alt="">
-         </div>
-         <div style="color: white; text-align: center; margin: 0 5% 2% 5%">
+          <p style="font-family: cursive;">IOSC</p>
+        </div>
+        <div style="color: white; text-align: center; margin: 0 5% 2% 5%">
           <img src="../public/img/sponsors/gdsc.png" class="iosc_logo" width="200" alt="">
-         </div>
-         <div style="color: white; text-align: center; margin: 0 5% 2% 5%">
+          <p style="font-family: cursive;">GDSC-ABESEC</p>
+        </div>
+        <div style="color: white; text-align: center; margin: 0 5% 2% 5%">
           <img src="../public/img/sponsors/algocs.png" class="iosc_logo" width="200" alt="">
+          <p style="font-family: cursive;">ALGOCS</p>
          </div>
       </div>
     </div>
