--- a/pages/landing.html
+++ b/pages/landing.html
@@ -325,6 +325,13 @@
         <span class="hover-text" aria-hidden="true">&nbsp;Discord&nbsp;</span>
       </button> -->
     </div>
+  <br>
+  <div 
+	class="apply-button" 
+	data-hackathon-slug="iwoc" 
+	data-button-theme="light"
+	style="height: 44px; width: 312px"
+></div>
   
     <!-- about -->
     <div class="about" id="about">
@@ -1208,7 +1215,7 @@
               <li><a href="#timeline" style="font-size:14px;  color:rgb(135, 178, 206)">TimeLine</a></li>
               <li><a href="#faq" style="font-size:14px;  color:rgb(135, 178, 206)">FAQs</a></li>
               <!-- UPDATE THE LINK -->
-              <li><a href="#" style="font-size:14px;  color:rgb(135, 178, 206)">Apply with Unstop</a></li>
+              <li><a href="https://iwoc.devfolio.co/" style="font-size:14px;  color:rgb(135, 178, 206)">Apply with devfolio</a></li>
           </ul>
       </div>
       <div class="third">
@@ -1259,7 +1266,7 @@
     loader.style.display = "none"
       })
   </script> -->
-
+<script defer async src="https://apply.devfolio.co/v2/sdk.js"></script>
   <script src="../public/js/click_snow.js"></script>
  <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
   <!-- <script src="../public/js/particles.js"></script>
