--- a/pages/landing.html
+++ b/pages/landing.html
@@ -326,12 +326,14 @@
       </button> -->
     </div>
   <br>
+	<center>
   <div 
 	class="apply-button" 
 	data-hackathon-slug="iwoc" 
 	data-button-theme="light"
 	style="height: 44px; width: 312px"
 ></div>
+	  </center>
   
     <!-- about -->
     <div class="about" id="about">
