--- a/pages/landing.html
+++ b/pages/landing.html
@@ -115,9 +115,9 @@
                   <!-- <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
                     <a class="nav-link" href="#faq">FAQ's</a>
                   </li> -->
-                  <!-- <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
-                    <a class="nav-link  " style="color: #A4BEE1;" href="/project">Projects</a>
-                  </li> -->
+                  <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
+                    <a class="nav-link  " style="color: #A4BEE1;" href="/projects">Projects</a>
+                  </li>
                   <!-- <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
                     <a class="nav-link" href="/login">Login</a>
                   </li> -->
