fix: update timeline

--- a/pages/landing.html
+++ b/pages/landing.html
@@ -458,7 +458,7 @@
         <div data-aos="zoom-out-down">
   
           <div class="cd-timeline-content">
-            <h2><strong>January 4th '2024</strong></h2>
+            <h2><strong>January 4th 2024</strong></h2>
             <p>
               Unlock Registration: Sign up and join the journey!
             </p>
@@ -471,7 +471,7 @@
         <div data-aos="zoom-out-down">
           <div data-aos="zoom-in"></div>
           <div class="cd-timeline-content">
-            <h2><strong>January 4th-10th '2024</strong></h2>
+            <h2><strong>January 4th-10th 2024</strong></h2>
             <p>
               Project Acceptance Duration: The time taken for a project to be approved or accepted.
             </p>
@@ -483,7 +483,7 @@
         <div class="cd-timeline-img cd-location"></div>
         <div data-aos="zoom-out-down">
           <div class="cd-timeline-content">
-            <h2><strong>January 10th '2024</strong></h2>
+            <h2><strong>January 10th 2024</strong></h2>
             <p>
               <!-- Talk sessions by Shashank Srivastava, Saksham Saini, Vanshika Garg -->
               Online GitHub Session by Experts: Dive deep into the world of GitHub with top experts.
@@ -496,7 +496,7 @@
         <div class="cd-timeline-img cd-location"></div>
         <div data-aos="zoom-out-down">
           <div class="cd-timeline-content">
-            <h2><strong>January 11th '2024 </strong></h2>
+            <h2><strong>January 11th 2024 </strong></h2>
             <p>
               <!-- Talk sessions by Unnati Chhabra, Kanishk Pachauri. -->
               Grand Opening Ceremony: Let's ignite the event with enthusiasm and brilliance!
@@ -510,7 +510,7 @@
         <div class="cd-timeline-img cd-location"></div>
         <div data-aos="zoom-out-down">
           <div class="cd-timeline-content">
-            <h2><strong>January 27th '2024</strong></h2>
+            <h2><strong>January 27th 2024</strong></h2>
             <p>Unmissable Speaker Session: Prepare to be inspired by an extraordinary individual!</p>
           </div>
         </div>
@@ -520,7 +520,7 @@
         <div class="cd-timeline-img cd-location"></div>
         <div data-aos="zoom-out-down">
           <div class="cd-timeline-content">
-            <h2><strong>Febuary 11th '2024</strong></h2>
+            <h2><strong>February 11th 2024</strong></h2>
             <p>Contributions End & Closing Ceremony: Celebrate achievements and the event's success!</p>
           </div>
         </div>
