added: routes on landing page

--- a/pages/landing.html
+++ b/pages/landing.html
@@ -108,6 +108,12 @@
                   <li class="nav-item pl-md-0 ml-0 ml-md-4">
                     <a class="nav-link" style="color: #A4BEE1;" href="#prizes">Prizes</a>
                   </li>
+                  <li class="nav-item pl-md-0 ml-0 ml-md-4">
+                    <a class="nav-link" style="color: #A4BEE1;" href="/projects">Projects</a>
+                  </li>
+                  <li class="nav-item pl-md-0 ml-0 ml-md-4">
+                    <a class="nav-link" style="color: #A4BEE1;" href="/login">Dashboard</a>
+                  </li>
                    <!-- <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
                     <a class="nav-link" href="#speaker">Speakers</a>
                   </li> -->
@@ -121,9 +127,9 @@
                   <!-- <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
                     <a class="nav-link" href="/login">Login</a>
                   </li> -->
-                  <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4 ">
+                  <!-- <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4 "> -->
                     <!-- <a class="nav-link" href="/eventRegistration">Upcoming Talks</a> -->
-                  </li>
+                  <!-- </li> -->
                   <!-- <button class="button-register">
                     Register Now
                     <div class="star-1">
