--- a/pages/login.html
+++ b/pages/login.html
@@ -71,7 +71,7 @@
         </a>
         <div class="text-center pt-12 pb-12 text-white">
           <p>Not a part of IWOC yet? 
-            <a href="/register" class="underline font-semibold">Register here.</a></p>
+            <a href="https://iwoc.devfolio.co/" class="underline font-semibold">Register here.</a></p>
         </div>
       </div>
 
