--- a/pages/admin-register.html
+++ b/pages/admin-register.html
@@ -20,7 +20,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="apple-touch-icon" sizes="76x76" href="../public/img/apple-icon.png">
-  <link rel="icon" type="image/png" href="../public/img/favicon.png">
+  <link rel="icon" type="image/x-icon" href="../public/img/Season_2/Iwoc_S2.png" />
   <title>
     Soft UI Dashboard by Creative Tim
   </title>
