--- a/pages/landing.html
+++ b/pages/landing.html
@@ -296,7 +296,7 @@
   
     <!-- buttons -->
     <div class="twobuttons" >
-      <button class="bookmarkBtn discord-btn-1"   onclick="window.location.href= 'https://discord.com/invite/RxUEtXWH'">
+      <button class="bookmarkBtn discord-btn-1"   onclick="window.location.href= 'https://discord.gg/8rkxpC639s'">
         <span class="IconContainer"> 
           <!-- <svg viewBox="0 0 384 512" height="0.9em" class="icon-btn"><path d="M0 48V487.7C0 501.1 10.9 512 24.3 512c5 0 9.9-1.5 14-4.4L192 400 345.7 507.6c4.1 2.9 9 4.4 14 4.4c13.4 0 24.3-10.9 24.3-24.3V48c0-26.5-21.5-48-48-48H48C21.5 0 0 21.5 0 48z"></path></svg> -->
           <svg width="1.9em" height="1.9em" viewBox="0 -28.5 256 256" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid">
