--- a/pages/unauthenticated.html
+++ b/pages/unauthenticated.html
@@ -38,7 +38,7 @@
                     <p>Dashboard</p>
                 </div>
 
-                <div class="menu-item flex" onclick="window.open('/project','mywindow');">
+                <div class="menu-item flex" href="/projects">
                     <div class="icon">
                         <ion-icon name="magnet-outline"></ion-icon>
                     </div>
