fix: corrected faq

--- a/pages/landing.html
+++ b/pages/landing.html
@@ -1080,7 +1080,7 @@
         </h2>
         <div id="accordion__panel-3" class="accordion__item--panel" role="region" aria-labelledby="accordion__trigger-3">
           <p>
-            Yes, you can participate as Both.
+            No, you can participate either as a contributor or as a maintainer.
           </p>
         </div>
       </div>
