--- a/pages/login.html
+++ b/pages/login.html
@@ -49,8 +49,8 @@
 
       <!-- <div class="flex justify-center md:justify-start pt-12 md:pl-12 md:-mb-24"> -->
         <!-- <a href="/" class="bg-black text-white font-bold text-xl p-4">Logo</a> -->
-        <div id="login-logo">
-        <a href="/"><img src="../public/img/iwoc_logo.png" class="bg- text-white font-bold text-xl p-4 " /></a>
+        <div id="login-logo" >
+        <a href="/"><img src="../public/img/Season_2/login-image.png" class="bg- text-white font-bold text-xl p-4 " /></a>
       </div>
       <!-- </div> -->
 
