--- a/pages/landing.html
+++ b/pages/landing.html
@@ -997,30 +997,39 @@
     <div class="community-partner " style="width: 100vw; ">
       <h1 class="title" style="margin-top: 8%; margin-bottom: 2%">Community Partner</h1>
       <div class="" style="display: flex;  justify-content: center;  flex-wrap: wrap; max-width: 1000px; margin: 0 auto;">
-        <div style="color: white; text-align: center; margin: 0 5% 2% 5%">
+        <div style="color: white; text-align: center; margin: 0 5% 2% 5%;  display: flex ; flex-direction: column; justify-content: space-between;">
           <img src="../public/img/sponsors/iosc.png" class="iosc_logo" width="200" alt="">
           <p style="font-family: cursive;">IOSC</p>
         </div>
-        <div style="color: white; text-align: center; margin: 0 5% 2% 5%">
+        <div style="color: white; text-align: center; margin: 0 5% 2% 5%; display: flex ; flex-direction: column; justify-content: space-between;">
           <img src="../public/img/sponsors/gdsc.png" class="iosc_logo" width="200" alt="">
           <p style="font-family: cursive;">GDSC-ABESEC</p>
         </div>
-        <div style="color: white; text-align: center; margin: 0 5% 2% 5%">
+        <div style="color: white; text-align: center; margin: 0 5% 2% 5%;  display: flex ; flex-direction: column; justify-content: space-between;">
           <img src="../public/img/sponsors/algocs.png" class="iosc_logo" width="180" alt="">
           <p style="font-family: cursive;">ALGOCS</p>
          </div>
-         <div style="color: white; text-align: center; margin: 0 5% 2% 5% ; ">
+         <div style="color: white; text-align: center; margin: 0 5% 2% 5% ;  display: flex ; flex-direction: column; justify-content: space-between;">
           <img src="../public/img/sponsors/gdsc.png" class="iosc_logo" width="180" alt="">
           <p style="font-family: cursive; margin-top: 13%;">GDSC-ABESIT</p>
          </div>
-         <div style="color: white; text-align: center; margin: 0 5% 2% 5% ; ">
+         <div style="color: white; text-align: center; margin: 0 5% 2% 5% ;  display: flex ; flex-direction: column; justify-content: space-between; ">
           <img src="../public/img/sponsors/loop.png" class="iosc_logo" width="160" alt="">
           <p style="font-family: cursive; margin-top: 0;">LOOP-GCET</p>
          </div>
-         <div style="color: white; text-align: center; margin: 0 5% 2% 5% ; ">
+         <div style="color: white; text-align: center; margin: 0 5% 2% 5% ; display: flex ; flex-direction: column; justify-content: space-between; ">
           <img src="../public/img/sponsors/gdsc.png" class="iosc_logo" width="180" alt="">
           <p style="font-family: cursive;  margin-top: 12%">GDSC-GCET</p>
          </div>
+         <div style="color: white; text-align: center; margin: 0 5% 2% 5% ;  display: flex ; flex-direction: column; justify-content: space-between;">
+          <img src="../public/img/sponsors/os-dev.png" class="iosc_logo" width="180" alt="">
+          <p style="font-family: cursive;  margin-top: 15%">OS community</p>
+         </div>
+         <div style="color: white; text-align: center; margin: 0 5% 2% 5% ; display: flex ; flex-direction: column; justify-content: space-between; ">
+          <img src="../public/img/sponsors/gdsc.png" class="iosc_logo" width="180" alt="">
+          <p style="font-family: cursive;  margin-top: 12%">GDSC-GL BAJAJ</p>
+         </div>
+         
       </div>
     </div>
   
